--- a/index-en.html
+++ b/index-en.html
@@ -376,7 +376,7 @@
                     <li class="opacity-7">minimum working environment.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Download</a>
+                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-minimum-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-7">Download</a>
               </li>
               <li class="col-3-12 ae-4">
                 <h3>Standard</h3>
@@ -391,7 +391,7 @@
                       user-friendly software.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
+                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-standard-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
               </li>
               <li class="col-3-12 ae-5">
                 <h3>Maximum</h3>
@@ -405,7 +405,7 @@
                     <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
+                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-maximum-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
               </li>
               <li class="col-3-12 ae-6">
                 <h3>Ultra</h3>
@@ -420,7 +420,7 @@
                       maintenance.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
+                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
               </li>
             </ul>
           </div>
