--- a/download-minimum-en.html
+++ b/download-minimum-en.html
@@ -60,65 +60,113 @@
 
     </svg>
 
-    <!-- Slide 1 (#85) -->
+    <!-- Slide 1 (#60) -->
     <section class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
 
-                    <div class="fix-7-12">
-                        <!--h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
-                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                            </svg></h1-->
-                        <li class="ae-1 fromTop">
-                            <img class="ae-1 rounded" width="650" src="assets/img/ultra1.jpg" alt="MiniOS Ultra" />
-                        </li>
-                        <ul class="grid grid-85 equal margin-top-5 ae-2 fromCenter" data-equal-collapse-width="767">
-                            <p class="ae-5 fromTop"><span class="opacity-8">Благодарим за загрузку MiniOS. Загрузка
-                                    должна начаться в ближайшее время. Если это не так, нажмите </span><a
-                                    href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso"
-                                    data-auto-download>здесь</a><span class="opacity-8">.</span></p>
-                            <p class="ae-6 fromTop verticalCenter reverse"><span class="opacity-8 bold"><a
-                                        href="https://github.com/minios-linux/minios-live/wiki/%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0-MiniOS-%D0%BD%D0%B0-%D0%B6%D1%91%D1%81%D1%82%D0%BA%D0%B8%D0%B9-%D0%B4%D0%B8%D1%81%D0%BA-%D0%B8%D0%BB%D0%B8-%D1%84%D0%BB%D0%B5%D1%88%D0%BA%D1%83">Как установить MiniOS?</a></span></p>
-                            <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
-                                    представлены не все варианты сборки MiniOS, рекомендуем попробовать:
-                                    <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-3">
-                                        <div class="pad" style="background: #F5FBFE">
-                                            <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
-                                                <ul class="p tiny">
-                                                    <li class="opacity-8">Все стабильные версии, включая сборки на
-                                                        английском языке, сборки базе Debian Buster, Debian Sid, сборки
-                                                        с архитектурой i386 и сборки с поддержкой aufs.</li>
-                                                </ul>
-                                            </div>
-                                            <a href="#"
-                                                class="button black gradient wide cropSides cropBottom ae-7">Стабильные
-                                                сборки</a>
+                    <div class="fix-12-12">
+                        <ul class="grid">
+                            <li class="col-6-12 left">
+                                <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
+                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+                                    </svg></h1>
+                                <p class="ae-3 fromLeft"><span class="opacity-8">Thank you for downloading MiniOS. The download should start shortly. If the download does not start, click </span><a
+                                        href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-minimum-amd64-xz.iso"
+                                        data-auto-download>here</a><span class="opacity-8">.</span></p>
+                                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
+                                    <li class="selected">Installation from Windows</li>
+                                    <li>Installation from Linux</li>
+                                    <li>Installation using multiple partitions</li>
+                                </ul>
+                            </li>
+                            <li class="col-6-12 left ae-5 fromCenter">
+                                <ul class="slider animated margin-top-4" data-slider-id="60-1">
+                                    <li class="selected fromCenter">
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
                                         </div>
                                     </li>
-                                    <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-4">
-                                        <div class="pad">
-                                            <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
-                                                <ul class="p tiny">
-                                                    <li class="opacity-8">
-                                                    <li class="opacity-8">Все тестовые версии (могут содержать ошибки,
-                                                        но чаще всего работоспособные), включая сборки на английском
-                                                        языке, сборки на базе Debian Buster, Debian Sid, сборки с
-                                                        архитектурой i386 и сборки с поддержкой aufs.</li>
+                                    <li class="fromCenter">
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-2">
+                                            <img class="wide" src="assets/img/standard1.jpg" alt="Video Thumbnail" />
+                                        </div>
                                     </li>
+                                    <li class="fromCenter">
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-3">
+                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
-                    <a href="#" class="button black gradient wide cropSides cropBottom ae-8">Тестовые сборки</a>
-                </div>
-                </li>
-                </ul>
-            </div>
 
-        </div>
-        </div>
+                </div>
+            </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
     </section>
+
+    <!-- Popup Video -->
+    <div class="popup autoplay" data-popup-id="60-1">
+        <div class="close"><svg>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+            </svg></div>
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+                    <div class="fix-10-12">
+                        <div class="embedVideo popupContent">
+                            <iframe src="http://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
+                                mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Popup Video -->
+    <div class="popup autoplay" data-popup-id="60-2">
+        <div class="close"><svg>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+            </svg></div>
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+                    <div class="fix-10-12">
+                        <div class="embedVideo popupContent">
+                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
+                                frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Popup Video -->
+    <div class="popup autoplay" data-popup-id="60-3">
+        <div class="close"><svg>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+            </svg></div>
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+                    <div class="fix-10-12">
+                        <div class="embedVideo popupContent">
+                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
+                                frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script>
         $(function () {
