--- a/index-en.html
+++ b/index-en.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" as="font"
     href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
 
-    <link rel="icon" type="image/svg+xml" href="/assets/svg/minios_icon.svg">
+  <link rel="icon" type="image/svg+xml" href="/assets/svg/minios_icon.svg">
 </head>
 
 <body class="slides chain simplifiedMobile animated">
@@ -127,12 +127,10 @@
       <path
         d="M23.6 6.3c-.3-1.2-1.4-2.2-2.6-2.3-3-.3-6-.3-9-.3s-6 0-9 .3c-1.2.1-2.3 1.1-2.6 2.3-.4 1.8-.4 3.8-.4 5.7 0 1.9 0 3.9.4 5.7.3 1.2 1.4 2.2 2.6 2.3 3 .3 6 .3 9 .3s6 0 9-.3c1.3-.1 2.3-1.1 2.6-2.4.4-1.7.4-3.7.4-5.6 0-1.9 0-3.9-.4-5.7zm-14.1 9v-6.6l6.5 3.3-6.5 3.3z" />
     </symbol>
-
     <symbol id="github" viewBox="0 0 24 24">
       <path
         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
     </symbol>
-
     <symbol id="telegram" viewBox="0 0 24 24">
       <path
         d="M 12,0 A 12,12 0 0 0 0,12 12,12 0 0 0 12,24 12,12 0 0 0 24,12 12,12 0 0 0 12,0 Z m 5.375976,6.7939454 c 0.111405,-0.00183 0.382775,0.041681 0.594728,0.2197264 0.211952,0.1780467 0.27503,0.2949779 0.292967,0.3955079 0.01794,0.10053 0.01485,0.412855 -0.003,0.5917969 -0.202666,2.0424134 -0.971836,6.7564064 -1.417968,9.0439444 -0.188775,0.967944 -0.560069,1.292457 -0.919922,1.32422 -0.781971,0.06902 -1.375294,-0.496428 -2.132742,-0.972657 -1.185257,-0.745202 -1.579972,-1.018912 -2.730469,-1.746093 -1.3295981,-0.840383 -0.784101,-1.131863 -0.02637,-1.886719 0.198303,-0.19755 3.484424,-3.193652 3.533203,-3.46875 0.04254,-0.239885 0.05653,-0.272628 -0.05273,-0.3808595 -0.109266,-0.1082313 -0.2384,-0.094428 -0.322266,-0.076172 C 14.072529,9.8637689 12.2629,11.009452 8.7626954,13.274414 8.225242,13.628391 7.7369449,13.802007 7.3007812,13.792969 6.8199458,13.783005 5.8965781,13.529806 5.2089843,13.31543 4.3656226,13.052488 3.6945628,12.915306 3.7529297,12.46875 3.7833309,12.236156 4.1173849,11.997059 4.7548828,11.753906 8.6807394,10.113364 11.299526,9.0332918 12.609375,8.5107421 16.349259,7.0187571 16.869464,6.8025588 17.375976,6.7939454 Z" />
@@ -197,9 +195,6 @@
         <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
         <li><a href="#screenshots">Screenshots</a></li>
       </ul>
-      <!--ul class="subMenu small opacity-8">
-        <li><a href="#"></a></li>
-      </ul-->
     </div>
   </nav>
 
@@ -280,28 +275,28 @@
           <div class="fix-12-12">
             <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
               data-slider-id="75-1">
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-4 fadeIn">
                 <img src="assets/img/maximum7.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-3 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
                 <img src="assets/img/maximum2.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
                 <img src="assets/img/maximum3.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
                 <img src="assets/img/maximum4.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
                 <img src="assets/img/maximum5.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
                 <img src="assets/img/maximum6.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
                 <img src="assets/img/maximum8.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
-              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+              <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-8 fadeIn">
                 <img src="assets/img/maximum9.jpg" class="wide rounded margin-bottom-1" alt="Image" />
               </li>
             </ul>
@@ -368,59 +363,59 @@
                 <h3>Minimum</h3>
                 <div class="price ae-5"><span class="currency">MB</span>420</div>
                 <div class="ae-5">
-                  <h6 class="uppercase bold small opacity-4">xz compression</h6>
+                  <h6 class="uppercase bold small opacity-4">amd64 xz</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                   <ul class="p tiny">
-                    <!--li><strong>The smallest edition</strong></li-->
-                    <li class="opacity-7">minimum working environment.</li>
+                    <li class="opacity-7">minimum working environment</li>
                   </ul>
                 </div>
-                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-minimum-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-7">Download</a>
+                <a href="download-minimum-en.html"
+                  class="button green gradient wide cropSides cropBottom ae-7">Download</a>
               </li>
               <li class="col-3-12 ae-4">
                 <h3>Standard</h3>
                 <div class="price ae-6"><span class="currency">MB</span>540</div>
                 <div class="ae-6">
-                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                  <h6 class="uppercase bold small opacity-4">amd64 zstd</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <!--li><strong>The standard edition</strong></li-->
                     <li class="opacity-8">includes additional console utilities, non-free firmware, and more
-                      user-friendly software.</li>
+                      user-friendly software</li>
                   </ul>
                 </div>
-                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-standard-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
+                <a href="download-standard-en.html"
+                  class="button green gradient wide cropSides cropBottom ae-8">Download</a>
               </li>
               <li class="col-3-12 ae-5">
                 <h3>Maximum</h3>
                 <div class="price ae-7"><span class="currency">MB</span>650</div>
                 <div class="ae-7">
-                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                  <h6 class="uppercase bold small opacity-4">amd64 zstd</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
-                    <!--li><strong>The maximal edition</strong></li-->
-                    <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance.</li>
+                    <li class="opacity-8">includes additional drivers, software for daily use and PC maintenance</li>
                   </ul>
                 </div>
-                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-maximum-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
+                <a href="download-maximum-en.html"
+                  class="button green gradient wide cropSides cropBottom ae-9">Download</a>
               </li>
               <li class="col-3-12 ae-6">
-                <h3>Ultra</h3>
-                <div class="price ae-8"><span class="currency">MB</span>1370</div>
+                <h3>Other variants</h3>
+                <div class="price ae-8"><span class="currency"></span>&nbsp;</div>
                 <div class="ae-7">
-                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
+                  <h6 class="uppercase bold small opacity-4">&nbsp;</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
-                    <!--li><strong>The ultimate edition</strong></li-->
-                    <li class="opacity-8">includes software for daily use, development, virtualization and PC
-                      maintenance.</li>
+                    <li class="opacity-8">Ultra edition, builds for i386, MiniOS variants based on other versions of
+                      Debian</li>
                   </ul>
                 </div>
-                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
+                <a href="https://ftp.minios.dev/current"
+                  class="button blue gradient wide cropSides cropBottom ae-10">Download</a>
               </li>
             </ul>
           </div>
