--- a/index-ru.html
+++ b/index-ru.html
@@ -369,62 +369,62 @@
                                 <h3>Minimum</h3>
                                 <div class="price ae-5"><span class="currency">MB</span>420</div>
                                 <div class="ae-5">
-                                    <h6 class="uppercase bold small opacity-4">сжатие xz</h6>
+                                    <h6 class="uppercase bold small opacity-4">amd64 zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                                     <ul class="p tiny">
-                                        <!--li><strong>Самая маленькая версия</strong></li-->
-                                        <li class="opacity-7">минимальная рабочая среда
-                                        </li>
+                                        <li class="opacity-7">минимальная рабочая среда</li>
                                     </ul>
                                 </div>
-                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-minimum-ru-amd64-xz.iso" class="button green gradient wide cropSides cropBottom ae-7">Скачать</a>
+                                <a href="download-minimum-ru.html"
+                                    class="button green gradient wide cropSides cropBottom ae-7">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-4">
                                 <h3>Standard</h3>
                                 <div class="price ae-6"><span class="currency">MB</span>540</div>
                                 <div class="ae-6">
-                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
+                                    <h6 class="uppercase bold small opacity-4">amd64 zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                                     <ul class="p tiny">
-                                        <!--li><strong>Стандартная версия</strong></li-->
                                         <li class="opacity-8">включает дополнительные консольные утилиты,
                                             несвободные микропрограммы и более удобное программное обеспечение</li>
                                     </ul>
                                 </div>
-                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-standard-ru-amd64-zstd.iso" class="button green gradient wide cropSides cropBottom ae-8">Скачать</a>
+                                <a href="download-standard-ru.html"
+                                    class="button green gradient wide cropSides cropBottom ae-8">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-5">
                                 <h3>Maximum</h3>
                                 <div class="price ae-7"><span class="currency">MB</span>650</div>
                                 <div class="ae-7">
-                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
+                                    <h6 class="uppercase bold small opacity-4">amd64 zstd</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                                     <ul class="p tiny">
-                                        <!--li><strong>Максимальная версия</strong></li-->
                                         <li class="opacity-8">включает дополнительные драйверы, программное
                                             обеспечение для ежедневного использования и обслуживания ПК
                                         </li>
                                     </ul>
                                 </div>
-                                <a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-maximum-ru-amd64-zstd.iso" class="button green gradient wide cropSides cropBottom ae-9">Скачать</a>
+                                <a href="download-maximum-ru.html"
+                                    class="button green gradient wide cropSides cropBottom ae-9">Скачать</a>
                             </li>
                             <li class="col-3-12 ae-6">
-                                <h3>Ultra</h3>
-                                <div class="price ae-8"><span class="currency">MB</span>1370</div>
+                                <h3>Другие варианты</h3>
+                                <div class="price ae-8"><span class="currency"></span>&nbsp;</div>
                                 <div class="ae-7">
-                                    <h6 class="uppercase bold small opacity-4">сжатие zstd</h6>
+                                    <h6 class="uppercase bold small opacity-4">&nbsp;</h6>
                                 </div>
                                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                                     <ul class="p tiny">
-                                        <!--li><strong>Ещё более максимальная версия;)</strong></li-->
-                                        <li class="opacity-8">включает программное обеспечение для ежедневного
-                                            использования, разработки, виртуализации и обслуживания ПК</li>
+                                        <li class="opacity-8">Редакция Ultra, сборки для i386, варианты MiniOS на базе
+                                            других версий Debian</li>
                                     </ul>
                                 </div>
-                                <a href="download-ultra-ru.html" class="button green gradient wide cropSides cropBottom ae-10">Скачать</a>
+                                <a href="https://ftp.minios.dev/current"
+                                    class="button blue gradient wide cropSides cropBottom ae-10"
+                                    target="_blank">Скачать</a>
                             </li>
                         </ul>
                     </div>
