--- a/download-maximum-en.html
+++ b/download-maximum-en.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Page Title -->
-    <title>MiniOS - Быстрая. Простая. Надёжная.</title>
+    <title>MiniOS - Fast. Simple. Reliable.</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
