--- a/download-minimum-en.html
+++ b/download-minimum-en.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Page Title -->
-    <title>MiniOS - Быстрая. Простая. Надёжная.</title>
+    <title>MiniOS - Fast. Simple. Reliable.</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
@@ -119,7 +119,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="http://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1" frameborder="0" webkitallowfullscreen
                                 mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
