--- a/download-standard-ru.html
+++ b/download-standard-ru.html
@@ -74,7 +74,7 @@
                                     </svg></h1>
                                 <p class="ae-3 fromLeft"><span class="opacity-8">Благодарим за загрузку MiniOS. Загрузка
                                         должна начаться в ближайшее время. Если загрузка не началась, нажмите </span><a
-                                        href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-standard-ru-amd64-zstd.iso"
+                                        href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso"
                                         data-auto-download>здесь</a><span class="opacity-8">.</span></p>
                                 <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
                                     <li class="selected">Установка из Windows</li>
@@ -120,7 +120,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1" frameborder="0" webkitallowfullscreen
+                            <iframe src="http://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
                                 mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
