--- a/download-minimum-en.html
+++ b/download-minimum-en.html
@@ -119,7 +119,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1" frameborder="0" webkitallowfullscreen
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
                                 mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
