--- a/download-minimum-ru.html
+++ b/download-minimum-ru.html
@@ -120,7 +120,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1" frameborder="0" webkitallowfullscreen
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
                                 mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                 <div class="wrap">
                     <div class="fix-10-12">
                         <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U?autoplay=1"
+                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
