--- a/download-standard-en.html
+++ b/download-standard-en.html
@@ -76,7 +76,7 @@
                                         download should start shortly. If the download does not start,
                                         click </span><a
                                         href="https://ftp.minios.dev/current-links/minios-bullseye-xfce-standard-amd64-zstd.iso"
-                                        data-auto-download1>here</a><span class="opacity-8">.</span></p>
+                                        data-auto-download>here</a><span class="opacity-8">.</span></p>
                             </li>
                         </ul>
 
