--- a/download-standard-en.html
+++ b/download-standard-en.html
@@ -78,9 +78,12 @@
                                         href="https://ftp.minios.dev/current-links/minios-bullseye-xfce-standard-amd64-zstd.iso"
                                         data-auto-download>here</a><span class="opacity-8">.</span></p>
                             </li>
+                            <li class="col-6-12">
+                                <img class="ae-4 rounded" width="605" src="assets/img/background/" alt="MiniOS" />
+                            </li>
                         </ul>
 
-                        <div class="fix-11-12">
+                        <!--div class="fix-11-12">
                             <ul class="grid fixedSpaces equal left grid-73">
                                 <li class="col-4-12 ae-3">
                                     <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement">
@@ -107,7 +110,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div-->
                     </div>
 
                 </div>
