--- a/index-ru.html
+++ b/index-ru.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="yandex-verification" content="112ea334e65fa41b" />
 
     <!-- Page Title -->
     <title>MiniOS - Быстрая. Простая. Надёжная.</title>
